trying to fix off center button pictures

--- a/styles.css
+++ b/styles.css
@@ -79,18 +79,34 @@ body {
     
 } */
 .linkedin {
+    padding: 0;
+    margin: 0;
+    align-items: center;
+    background-color: transparent;
     width: 50px;
     height: 50px;
 }
 .linkedin img{
+    padding: 0;
+    margin: 0;
+    align-items: center;
+    background-color: transparent;
     width: 50px;
     height: 50px;
 }
 .github {
+    padding: 0;
+    margin: 0;
+    align-items: center;
+    background-color: transparent;
     width: 50px;
     height: 50px;
 }
 .github img{
+    padding: 0;
+    margin: 0;
+    align-items: center;
+    background-color: transparent;
     width: 50px;
     height: 50px;
 }
